data/derived/comb/progs/unify/prog0075.ml.out
Characters 8-11:
  let _ = 1.0/max_float;;
          ^^^
Error: This expression has type float but an expression was expected of type
         int
